# code-xray

./: .gitignore  .xrayrc.example  LICENSE  MANIFEST.in  README.md  README_CN.md  plugin.json  pyproject.toml  xray.py
.claude/commands/: xray.md
docs/: demo-flask.html  demo-self.html  demo-vscode.html  index.html
templates/: dashboard.html
xray/: __init__.py  __main__.py  ai_output.py  analyzer.py  cli.py  git_stats.py  renderer.py  scanner.py  telemetry.py
xray/templates/: dashboard.html
